examples/invalid/test09.alice
x was a number.
x was a number.
